src/test/deca/context/invalid/provided/returntype_void.deca
//Resultats :
//Erreur contextuelle
//Ligne 6: In order to return, returntype should be different than void
class A {
 int x;
 void setX(int x) {return x;}
}
